manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: howlil-app
  namespace: portofolio
  labels:
    app: howlil-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: howlil-app
  template:
    metadata:
      labels:
        app: howlil-app
    spec:
      terminationGracePeriodSeconds: 30

      imagePullSecrets:
        - name: howlil-registry-secret

      # IMPORTANT: numeric UID/GID supaya lulus policy runAsNonRoot
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: howlil-app
          # workflow akan replace otomatis menjadi sha terbaru
          image: registry.howlil.my.id/howlil/howlil-app:4fe3493f36b46979749b5fe82ace6de875ce58b0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 4321
              name: http

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: howlil-service
  namespace: portofolio
spec:
  selector:
    app: howlil-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: howlil-ingress
  namespace: portofolio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: howlil.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: howlil-service
                port:
                  number: 80
